# Django-auth-crud

./: README.md  manage.py  pyproject.toml  requirements.txt
DjangoCRUD/: asgi.py  settings.py  urls.py  wsgi.py
Tasks/: admin.py  forms.py  models.py  views.py
Tasks/migrations/: 0001_initial.py
Tasks/templates/: base.html  home.html
Tasks/templates/form/: signin.html  signup.html
Tasks/templates/tasks/: create_task.html  task_detail.html  tasks.html
